devsecops-gitops/policies/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag-not-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "L'utilisation du tag latest est interdite."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
